# gijiroku-ai

./: .env.example  .gitignore  CLAUDE.md  DESIGN.md  IMPLEMENTATION_SPEC.md  LICENSE  README.md  REQUIREMENTS.md  build.bat  build.sh  config.py  create_shortcut.sh  exceptions.py  main.py  pipeline.py  pyproject.toml  requirements.txt
.claude/: settings.json
.github/workflows/: test.yml
credentials/: README.md
docs/superpowers/plans/: 2026-04-26-distribution-packaging.md  2026-04-26-gijiroku-ai.md  2026-04-26-tray-auto-recording.md
docs/superpowers/specs/: 2026-04-26-tray-auto-recording-design.md
generator/: minutes.py
recorder/: audio.py  screen.py
tests/: conftest.py  test_audio_recorder.py  test_config.py  test_crypto.py  test_file_manager.py  test_generator.py  test_google_drive.py  test_icons.py  test_main.py  test_monitor.py  test_notification.py  test_onedrive.py  test_pipeline.py  test_resource_path.py  test_retry.py  test_screen_recorder.py  test_transcriber.py  test_tray_app.py  test_ui.py
transcriber/: gemini.py
tray/: app.py  icons.py  monitor.py
ui/: app.py  setup.py  widgets.py
uploader/: base.py  google_drive.py  onedrive.py
utils/: crypto.py  file_manager.py  notification.py  resource_path.py  retry.py
