[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gijiroku-ai"
version = "0.1.0"
description = "会議の録音・文字起こし・議事録生成を自動で行うデスクトップアプリ"
requires-python = ">=3.9"
readme = "README.md"

dependencies = [
    "google-genai>=1.0.0",
    "python-dotenv>=1.0.0",
    "cryptography>=3.0",
    "google-api-python-client>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "google-auth-httplib2>=0.2.0",
    "msal>=1.28.0",
    "requests>=2.31.0",
    "plyer>=2.1.0",
    "pystray>=0.19.0",
    "Pillow>=10.0.0",
    "pywin32>=306; sys_platform == 'win32'",
    "pyobjc-framework-Quartz>=10.0; sys_platform == 'darwin'",
    "pyobjc-framework-AppKit>=10.0; sys_platform == 'darwin'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pyinstaller>=6.0.0",
]

[project.scripts]
gijiroku-ai = "main:main"
